# my-claude-skills

./: .gitignore  LICENSE  README.md
acud-icon-components/: SKILL.md
agent-teams-playbook/: SKILL.md
aihc-kubeconfig/: SKILL.md
android-peer-pushedcode-reviewer/: SKILL.md
annotation-converter/: SKILL.md
app-builder/: SKILL.md
arxiv-search/: SKILL.md
baidu-baike/: SKILL.md  _meta.json
baidu-exchange-skill/: README.md  SKILL.md  contact_memory_rules.md  requirements.txt
baidu-scholar-search/: SKILL.md
baidu-search/: SKILL.md
bdpan-storage/: README.md  SKILL.md
bilibili-subtitle-extractor/: SKILL.md
claude-backup-migrate/: SKILL.md
code-generation/: SKILL.md
code-review-skill/: README.md  SKILL.md
daily-hot-news/: SKILL.md  hot_fetch.py  simple_fetch.py
database-helper/: SKILL.md
doc-check-solution/: SKILL.md
docx/: SKILL.md
experiment-code-cleanup/: SKILL.md
figma-image-processor/: SKILL.md
file-covert-to-markdown/: SKILL.md
gemini/: SKILL.md
go-code-analyzer/: SKILL.md
go-codereviewer/: SKILL.md
go-robustness-review-v2/: SKILL.md
hf-model-explorer/: SKILL.md
iapi-manager/: SKILL.md
icafe-skill/: API.md  CHANGELOG.md  IQL.md  README.md  SKILL.md  __init__.py  auth.py  batch_operations.py  card-creation-examples.md  check_workflow.py  client.py  config.yaml.example  create.py  create_card.py  detect_required_fields.py  exceptions.py  field_config.py  general-guide.md  helpers.py  models.py  plan-examples.md  plan.py  plan_transition.py  pyproject.toml  query.py  query_card.py  requirements.txt  setup.py  transition-to-fixed.md  transition-to-nonbug.md  update.py  update_card.py  utils.py
(+244 files in other folders)
